--- a/02_qcomputing.ipynb
+++ b/02_qcomputing.ipynb
@@ -54,11 +54,11 @@
    "metadata": {},
    "source": [
     "## Quantum Computing\n",
-    "- Decohear: \n",
-    "- Quantum error:\n",
-    "- Entaglement:  \n",
-    "- Superposition:\n",
-    "- Explain the Scrodigars Cat:\n",
+    "- Decohear: The process where a quantum system collapses into a classical state due to unwanted interactions with the environment. Happens because it becomes entangled with its surroundings, which destroys the superposition. \n",
+    "- Quantum error: Disturbances in the state of a Quibit. (Bit Flip and Phase Flip) \n",
+    "- Entaglement: Two or more particles become entangled so the state of one becomes linked with the other. Particle has a probability to be 0 and 1 at the same time. \n",
+    "- Superposition: This allows Quantum objects to exist at the same time in more than one state or location. This enables Quibits to perform multiple operations at the same time.\n",
+    "- Explain the Scrodigars Cat: Illustrates superposition by describing a cat inside a sealed box with a radioactive atom, poison, and a device that triggers poison upon atom decay. The thought experiment states that the cat is simultaneously in a superposition state of being both alive and dead until the box is opened and observed. Basically demonstrating how a quantum system can exist in multiple states at once (superposition) \n",
     "\n",
     "## Articles to read\n",
     "- [Superposition and Entaglement](https://compass.rauias.com/current-affairs/quantum-superposition-entanglement/)\n",
