--- a/02_qcomputing.ipynb
+++ b/02_qcomputing.ipynb
@@ -63,7 +63,10 @@
     "## Articles to read\n",
     "- [Superposition and Entaglement](https://compass.rauias.com/current-affairs/quantum-superposition-entanglement/)\n",
     "- [Entaglement concept](https://scienceexchange.caltech.edu/topics/quantum-science-explained/entanglement)\n",
-    "- [Cat](https://www.youtube.com/watch?v=UjaAxUO6-Uw)"
+    "- [Cat](https://www.youtube.com/watch?v=UjaAxUO6-Uw)\n",
+    "- [Qibits and Quantum Gates](https://quantumpedia.uk/an-introduction-to-quantum-logic-gates-cee92ba9c1cc)\n",
+    "\n",
+    "- Location: CLEAR Lab:  AET 2.246/ 11:30am"
    ]
   },
   {
