--- a/03_Introduction_to_Machine_Learning.ipynb
+++ b/03_Introduction_to_Machine_Learning.ipynb
@@ -2110,6 +2110,18 @@
         "print(\"The KNeighbors model_k1 has accuracy = \", acc1)\n",
         "print(\"The KNeighbors model_k2 has accuracy = \", acc2)"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Important websites: https://qiskit-community.github.io/qiskit-machine-learning/tutorials/index.html"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": []
     }
   ],
   "metadata": {
