--- a/04_ReadDatasets.ipynb
+++ b/04_ReadDatasets.ipynb
@@ -18,7 +18,24 @@
     }
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "import csv\n",
+    "import numpy as np\n",
+    "\n",
+    "# to read the file into a python list\n",
+    "filename = \"Thyroid_Diff.csv\"\n",
+    "with open(filename, 'r') as f:\n",
+    "    reader = csv.reader(f)\n",
+    "    header = next(reader)\n",
+    "    data = [row for row in reader]\n",
+    "\n",
+    "# this converts the list to an array of objects bc some columns are actually strings\n",
+    "data = np.array(data, dtype=object)  \n",
+    "\n",
+    "# split features X from  labels y\n",
+    "X = data[:, :-1]  # all columns except last\n",
+    "y = data[:, -1]   # last column\n"
+   ]
   },
   {
    "cell_type": "code",
@@ -30,7 +47,23 @@
     }
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "# converts string values into integers \n",
+    "from sklearn.preprocessing import LabelEncoder\n",
+    "\n",
+    "# encode X\n",
+    "for i in range(X.shape[1]):\n",
+    "    le = LabelEncoder()\n",
+    "    X[:, i] = le.fit_transform(X[:, i])\n",
+    "\n",
+    "# convert to float to make sure can be used, \n",
+    "# all values must be numbers before QSVC\n",
+    "X = X.astype(float)\n",
+    "\n",
+    "# encode y\n",
+    "y_enc = LabelEncoder()\n",
+    "y = y_enc.fit_transform(y)\n"
+   ]
   },
   {
    "cell_type": "code",
@@ -42,7 +75,14 @@
     }
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "# split into X_train, X_test, y_test, y_train\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "X_train, X_test, y_train, y_test = train_test_split(\n",
+    "    X, y, test_size=0.2, random_state=42\n",
+    ")\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -62,13 +102,28 @@
     }
    },
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "435b6bfc",
-   "metadata": {},
-   "source": []
+   "source": [
+    "# applying QSVC\n",
+    "from qiskit.circuit.library import ZZFeatureMap\n",
+    "from qiskit.primitives import Sampler\n",
+    "from qiskit_machine_learning.state_fidelities import ComputeUncompute\n",
+    "from qiskit_machine_learning.kernels import FidelityQuantumKernel\n",
+    "from qiskit_machine_learning.algorithms import QSVC\n",
+    "\n",
+    "# quantum kernel since QSVC uses kernel-based method\n",
+    "feature_map = ZZFeatureMap(feature_dimension=X_train.shape[1], reps=2, entanglement=\"linear\")\n",
+    "sampler = Sampler()  # classical simulator\n",
+    "fidelity = ComputeUncompute(sampler=sampler)\n",
+    "quantum_kernel = FidelityQuantumKernel(fidelity=fidelity, feature_map=feature_map)\n",
+    "\n",
+    "# training QSVC\n",
+    "qsvc = QSVC(quantum_kernel=quantum_kernel)\n",
+    "qsvc.fit(X_train, y_train)\n",
+    "\n",
+    "# QSVC predicts labels on test data for new test samples using the trained kernel\n",
+    "score = qsvc.score(X_test, y_test)\n",
+    "print(f\"QSVC classification test score: {score:.2f}\")"
+   ]
   }
  ],
  "metadata": {
