--- a/FINAL_PROJECT.ipynb
+++ b/FINAL_PROJECT.ipynb
@@ -96,7 +96,11 @@
     "| ✅ **Final Project Presentation** | Slide show with 10min - 15min/ IEEE article corrected with observations | **December 2nd, 2025 – 1 PM to 3PM** |\n",
     "\n",
     "---\n",
-    "Link to the conference: https://sci25.supercomputingindia.org/call_for_papers.html\n",
+    "Link to the conference deadline December 12th: https://www.pdp2026.org/qc/\n",
+    "\n",
+    "Link to the conference series (Germany, 2026) deadline December 19th: https://isc-hpc.com/submissions/research-paper/\n",
+    "\n",
+    "Link to the conference IEEE (Houston, TX, 2026) deadline December 5th: https://icaic.gyancity.com/cfp.html\n",
     "\n",
     "🧠 Good luck! You're capable of creating amazing work!"
    ]
