--- a/04_ReadDatasets.ipynb
+++ b/04_ReadDatasets.ipynb
@@ -10,20 +10,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "46eacc34",
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import csv\n",
     "import numpy as np\n",
     "\n",
     "# to read the file into a python list\n",
-    "filename = \"Thyroid_Diff.csv\"\n",
+    "filename = \"datasets/Thyroid_Diff.csv\"\n",
     "with open(filename, 'r') as f:\n",
     "    reader = csv.reader(f)\n",
     "    header = next(reader)\n",
@@ -39,13 +35,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "bc922515",
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
+   "execution_count": 3,
+   "id": "116e8786",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['27', 'F', 'No', 'No', 'No', 'Euthyroid',\n",
+       "       'Single nodular goiter-left', 'No', 'Micropapillary', 'Uni-Focal',\n",
+       "       'Low', 'T1a', 'N0', 'M0', 'I', 'Indeterminate'], dtype=object)"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
     }
-   },
+   ],
+   "source": [
+    "X[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "bc922515",
+   "metadata": {},
    "outputs": [],
    "source": [
     "# converts string values into integers \n",
@@ -67,13 +82,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "66ca307c",
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
+   "execution_count": 10,
+   "id": "6b0987a1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[11.  0.  0.  0.  0.  2.  3.  3.  2.  1.  2.  0.  0.  0.  0.  2.]\n",
+      "Shape X: (383, 16)\n",
+      "Shape y: (383,)\n",
+      "Shape X: (2, 16)\n"
+     ]
     }
-   },
+   ],
+   "source": [
+    "print(X[0])\n",
+    "print(\"Shape X:\",X.shape)\n",
+    "print(\"Shape y:\", y.shape)\n",
+    "\n",
+    "X_new = X[:][0:2]\n",
+    "print(\"Shape X:\",X_new.shape)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "66ca307c",
+   "metadata": {},
    "outputs": [],
    "source": [
     "# split into X_train, X_test, y_test, y_train\n",
@@ -96,11 +133,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "8534e48e",
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# applying QSVC\n",
@@ -127,8 +160,27 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3.9.13",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.13"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "0f14eafc14d59e08ea1eb36eceea2bd255a133f763802a395841b8d750494883"
+   }
   }
  },
  "nbformat": 4,
