--- a/04_ReadDatasets.ipynb
+++ b/04_ReadDatasets.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "id": "46eacc34",
    "metadata": {},
    "outputs": [],
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "id": "116e8786",
    "metadata": {},
    "outputs": [
@@ -47,7 +47,7 @@
        "       'Low', 'T1a', 'N0', 'M0', 'I', 'Indeterminate'], dtype=object)"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "id": "bc922515",
    "metadata": {},
    "outputs": [],
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "id": "6b0987a1",
    "metadata": {},
    "outputs": [
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "id": "66ca307c",
    "metadata": {},
    "outputs": [],
@@ -131,37 +131,79 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "8534e48e",
+   "execution_count": 15,
+   "id": "ccf1d075",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "QSVC test accuracy (100 train / 20 test, 6 features): 0.779\n"
+     ]
+    }
+   ],
    "source": [
-    "# applying QSVC\n",
+    "# safe QSVC test block\n",
+    "from sklearn.utils import resample\n",
     "from qiskit.circuit.library import ZZFeatureMap\n",
-    "from qiskit.primitives import Sampler\n",
-    "from qiskit_machine_learning.state_fidelities import ComputeUncompute\n",
-    "from qiskit_machine_learning.kernels import FidelityQuantumKernel\n",
+    "from qiskit.primitives import StatevectorSampler\n",
+    "from qiskit_machine_learning.kernels import FidelityStatevectorKernel\n",
     "from qiskit_machine_learning.algorithms import QSVC\n",
     "\n",
-    "# quantum kernel since QSVC uses kernel-based method\n",
-    "feature_map = ZZFeatureMap(feature_dimension=X_train.shape[1], reps=2, entanglement=\"linear\")\n",
-    "sampler = Sampler()  # classical simulator\n",
-    "fidelity = ComputeUncompute(sampler=sampler)\n",
-    "quantum_kernel = FidelityQuantumKernel(fidelity=fidelity, feature_map=feature_map)\n",
+    "# reduce training set for speed\n",
+    "X_small, y_small = resample(X_train, y_train, n_samples=400, random_state=42)\n",
     "\n",
-    "# training QSVC\n",
+    "# reduce test set\n",
+    "X_test_small = X_test[:100]\n",
+    "y_test_small = y_test[:100]\n",
+    "\n",
+    "# use only first two features (2 qubits)\n",
+    "X_small = X_small[:, :6]\n",
+    "X_test_small = X_test_small[:, :6]\n",
+    "\n",
+    "# simple feature map (fast)\n",
+    "feature_map = ZZFeatureMap(feature_dimension=X_small.shape[1], reps=1, entanglement=\"linear\")\n",
+    "\n",
+    "# build the kernel (no sampler argument in v0.8.4)\n",
+    "quantum_kernel = FidelityStatevectorKernel(feature_map=feature_map)\n",
+    "\n",
+    "# train and evaluate QSVC\n",
     "qsvc = QSVC(quantum_kernel=quantum_kernel)\n",
-    "qsvc.fit(X_train, y_train)\n",
+    "qsvc.fit(X_small, y_small)\n",
     "\n",
-    "# QSVC predicts labels on test data for new test samples using the trained kernel\n",
-    "score = qsvc.score(X_test, y_test)\n",
-    "print(f\"QSVC classification test score: {score:.2f}\")"
+    "score = qsvc.score(X_test_small, y_test_small)\n",
+    "print(f\"QSVC test accuracy (100 train / 20 test, 6 features): {score:.3f}\")\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "ea521142",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training took 1.1977260112762451 seconds\n"
+     ]
+    }
+   ],
+   "source": [
+    "import time\n",
+    "start = time.time()\n",
+    "qsvc.fit(X_small, y_small)\n",
+    "print(\"Training took\", time.time() - start, \"seconds\")\n"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.13",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -175,12 +217,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
-  },
-  "vscode": {
-   "interpreter": {
-    "hash": "0f14eafc14d59e08ea1eb36eceea2bd255a133f763802a395841b8d750494883"
-   }
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
