--- a/04_ReadDatasets.ipynb
+++ b/04_ReadDatasets.ipynb
@@ -10,11 +10,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "46eacc34",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# loading the Thyroid_Diff.csv dataset\n",
     "import csv\n",
     "import numpy as np\n",
     "\n",
@@ -35,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "id": "116e8786",
    "metadata": {},
    "outputs": [
@@ -47,7 +48,7 @@
        "       'Low', 'T1a', 'N0', 'M0', 'I', 'Indeterminate'], dtype=object)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -58,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "id": "bc922515",
    "metadata": {},
    "outputs": [],
@@ -82,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "6b0987a1",
    "metadata": {},
    "outputs": [
@@ -98,6 +99,7 @@
     }
    ],
    "source": [
+    "# basic printing and shape checking to confirm dataset size\n",
     "print(X[0])\n",
     "print(\"Shape X:\",X.shape)\n",
     "print(\"Shape y:\", y.shape)\n",
@@ -108,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "id": "66ca307c",
    "metadata": {},
    "outputs": [],
@@ -131,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "ccf1d075",
    "metadata": {},
    "outputs": [
@@ -144,7 +146,7 @@
     }
    ],
    "source": [
-    "# safe QSVC test block\n",
+    "# 1. QSVC model\n",
     "from sklearn.utils import resample\n",
     "from qiskit.circuit.library import ZZFeatureMap\n",
     "from qiskit.primitives import StatevectorSampler\n",
@@ -158,7 +160,7 @@
     "X_test_small = X_test[:100]\n",
     "y_test_small = y_test[:100]\n",
     "\n",
-    "# use only first two features (2 qubits)\n",
+    "# use only first 6 features (6 qubits)\n",
     "X_small = X_small[:, :6]\n",
     "X_test_small = X_test_small[:, :6]\n",
     "\n",
@@ -169,11 +171,14 @@
     "quantum_kernel = FidelityStatevectorKernel(feature_map=feature_map)\n",
     "\n",
     "# train and evaluate QSVC\n",
+    "# this is the main quantum baseline model\n",
+    "# QSVC + optimal kernel\n",
+    "\n",
     "qsvc = QSVC(quantum_kernel=quantum_kernel)\n",
     "qsvc.fit(X_small, y_small)\n",
     "\n",
     "score = qsvc.score(X_test_small, y_test_small)\n",
-    "print(f\"QSVC test accuracy (100 train / 20 test, 6 features): {score:.3f}\")\n",
+    "print(f\"QSVC test accuracy: {score:.3f}\")\n",
     "\n",
     "\n",
     "\n"
@@ -181,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "ea521142",
    "metadata": {},
    "outputs": [
@@ -189,21 +194,132 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Training took 1.1977260112762451 seconds\n"
+      "Training took 1.1022884845733643 seconds\n"
      ]
     }
    ],
    "source": [
+    "# this measures how long it takes to train the QSVC model\n",
+    "# DOES NOT AFFECT ACCURACY\n",
+    "\n",
     "import time\n",
     "start = time.time()\n",
     "qsvc.fit(X_small, y_small)\n",
     "print(\"Training took\", time.time() - start, \"seconds\")\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a7584506",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Callable SVC + Quantum Kernel accuracy: 0.7792207792207793\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 2. Classical SVC + Quantum Kernel (callable) \n",
+    "# the classical SVC calls the quantum kernel during training\n",
+    "\n",
+    "from sklearn.svm import SVC\n",
+    "\n",
+    "svc_callable = SVC(kernel=quantum_kernel.evaluate)\n",
+    "svc_callable.fit(X_small, y_small)\n",
+    "\n",
+    "score_callable = svc_callable.score(X_test_small, y_test_small)\n",
+    "print(\"Callable SVC + Quantum Kernel accuracy:\", score_callable)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "05c58f6a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Precomputed SVC + Quantum Kernel accuracy: 0.7792207792207793\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 3. Classical SVC using Quantum Kernel (precomputed)\n",
+    "# the quantum kernel matrix is computed BEFORE training\n",
+    "\n",
+    "# this is the quantum kernel matrix calculation\n",
+    "K_train = quantum_kernel.evaluate(X_small)\n",
+    "K_test  = quantum_kernel.evaluate(X_test_small, X_small)\n",
+    "\n",
+    "svc_pre = SVC(kernel=\"precomputed\")\n",
+    "svc_pre.fit(K_train, y_small)\n",
+    "\n",
+    "score_pre = svc_pre.score(K_test, y_test_small)\n",
+    "print(\"Precomputed SVC + Quantum Kernel accuracy:\", score_pre)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c28ad9d8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Classical SVC (RBF) accuracy: 0.7532467532467533\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 4. Classical SVC (RBF baseline) \n",
+    "# this is the normal, classical SVC\n",
+    "# this is a good baseline to compare how good the quantum methods are\n",
+    "\n",
+    "svc_rbf = SVC(kernel=\"rbf\")\n",
+    "svc_rbf.fit(X_small, y_small)\n",
+    "\n",
+    "score_rbf = svc_rbf.score(X_test_small, y_test_small)\n",
+    "print(\"Classical SVC (RBF) accuracy:\", score_rbf)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9f252e1d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hybrid SVC accuracy: 0.7792207792207793\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 5. Hybrid SVC (classical SVC using the optimal quantum kernel matrix)\n",
+    "from sklearn.svm import SVC\n",
+    "\n",
+    "# hybrid SVC + optimal kernel\n",
+    "hybrid_svc = SVC(kernel=\"precomputed\")\n",
+    "hybrid_svc.fit(K_train, y_small)\n",
+    "\n",
+    "score_hybrid = hybrid_svc.score(K_test, y_test_small)\n",
+    "print(\"Hybrid SVC accuracy:\", score_hybrid)\n"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
