--- a/04_ReadDatasets.ipynb
+++ b/04_ReadDatasets.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "46eacc34",
    "metadata": {},
    "outputs": [],
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "116e8786",
    "metadata": {},
    "outputs": [
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "bc922515",
    "metadata": {},
    "outputs": [],
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "6b0987a1",
    "metadata": {},
    "outputs": [
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "66ca307c",
    "metadata": {},
    "outputs": [],
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "ccf1d075",
    "metadata": {},
    "outputs": [
@@ -141,12 +141,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "QSVC test accuracy (100 train / 20 test, 6 features): 0.779\n"
+      "QSVC test accuracy: 0.818\n"
      ]
     }
    ],
    "source": [
-    "# 1. QSVC model\n",
+    "# MODEL 1: QSVC + QuantumKernel (main baseline model)\n",
     "from sklearn.utils import resample\n",
     "from qiskit.circuit.library import ZZFeatureMap\n",
     "from qiskit.primitives import StatevectorSampler\n",
@@ -161,8 +161,8 @@
     "y_test_small = y_test[:100]\n",
     "\n",
     "# use only first 6 features (6 qubits)\n",
-    "X_small = X_small[:, :6]\n",
-    "X_test_small = X_test_small[:, :6]\n",
+    "X_small = X_small[:, :11]\n",
+    "X_test_small = X_test_small[:, :11]\n",
     "\n",
     "# simple feature map (fast)\n",
     "feature_map = ZZFeatureMap(feature_dimension=X_small.shape[1], reps=1, entanglement=\"linear\")\n",
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "ea521142",
    "metadata": {},
    "outputs": [
@@ -194,7 +194,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Training took 1.1022884845733643 seconds\n"
+      "Training took 2.5472989082336426 seconds\n"
      ]
     }
    ],
@@ -210,7 +210,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
+   "id": "0a613b3d",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'X_small' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 7\u001b[39m\n\u001b[32m      4\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01msklearn\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01msvm\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m SVC\n\u001b[32m      6\u001b[39m svc_rbf = SVC(kernel=\u001b[33m\"\u001b[39m\u001b[33mrbf\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m----> \u001b[39m\u001b[32m7\u001b[39m svc_rbf.fit(\u001b[43mX_small\u001b[49m, y_small)\n\u001b[32m      9\u001b[39m score_rbf = svc_rbf.score(X_test_small, y_test_small)\n\u001b[32m     10\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[33mClassical SVC (RBF) accuracy:\u001b[39m\u001b[33m\"\u001b[39m, score_rbf)\n",
+      "\u001b[31mNameError\u001b[39m: name 'X_small' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "# MODEL 2: Classical SVC (RBF baseline)\n",
+    "# this is the normal, classical SVC\n",
+    "# this is a good baseline to compare how good the quantum methods are\n",
+    "from sklearn.svm import SVC\n",
+    "\n",
+    "svc_rbf = SVC(kernel=\"rbf\")\n",
+    "svc_rbf.fit(X_small, y_small)\n",
+    "\n",
+    "score_rbf = svc_rbf.score(X_test_small, y_test_small)\n",
+    "print(\"Classical SVC (RBF) accuracy:\", score_rbf)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "id": "a7584506",
    "metadata": {},
    "outputs": [
@@ -218,12 +249,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Callable SVC + Quantum Kernel accuracy: 0.7792207792207793\n"
+      "Callable SVC + Quantum Kernel accuracy: 0.8181818181818182\n"
      ]
     }
    ],
    "source": [
-    "# 2. Classical SVC + Quantum Kernel (callable) \n",
+    "# MODEL 3: Classical SVC + Quantum Kernel as a callable\n",
     "# the classical SVC calls the quantum kernel during training\n",
     "\n",
     "from sklearn.svm import SVC\n",
@@ -237,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "05c58f6a",
    "metadata": {},
    "outputs": [
@@ -245,12 +276,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Precomputed SVC + Quantum Kernel accuracy: 0.7792207792207793\n"
+      "Precomputed SVC + Quantum Kernel accuracy: 0.8181818181818182\n"
      ]
     }
    ],
    "source": [
-    "# 3. Classical SVC using Quantum Kernel (precomputed)\n",
+    "# MODEL 4: Classical SVC using precomputed Quantum Kernel\n",
+    "# SVC + QuantumTrainableKernel (Precomputed)\n",
     "# the quantum kernel matrix is computed BEFORE training\n",
     "\n",
     "# this is the quantum kernel matrix calculation\n",
@@ -266,60 +298,83 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "c28ad9d8",
+   "execution_count": 2,
+   "id": "6965af30",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Classical SVC (RBF) accuracy: 0.7532467532467533\n"
+     "ename": "NameError",
+     "evalue": "name 'feature_map' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[2]\u001b[39m\u001b[32m, line 12\u001b[39m\n\u001b[32m      9\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mnumpy\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mnp\u001b[39;00m\n\u001b[32m     11\u001b[39m \u001b[38;5;66;03m# 1. Create trainable kernel\u001b[39;00m\n\u001b[32m---> \u001b[39m\u001b[32m12\u001b[39m trainable_kernel = TrainableFidelityStatevectorKernel(feature_map=\u001b[43mfeature_map\u001b[49m)\n\u001b[32m     14\u001b[39m \u001b[38;5;66;03m# 2. Initialize trainable parameters randomly\u001b[39;00m\n\u001b[32m     15\u001b[39m params = np.random.rand(\u001b[38;5;28mlen\u001b[39m(trainable_kernel.get_trainable_parameters()))\n",
+      "\u001b[31mNameError\u001b[39m: name 'feature_map' is not defined"
      ]
     }
    ],
    "source": [
-    "# 4. Classical SVC (RBF baseline) \n",
-    "# this is the normal, classical SVC\n",
-    "# this is a good baseline to compare how good the quantum methods are\n",
+    "# MODEL 5: Trainable Quantum Kernel\n",
+    "# I think it is incompatible with the python version I have installed\n",
+    "# is not working, I believe it is incompatible \n",
     "\n",
-    "svc_rbf = SVC(kernel=\"rbf\")\n",
-    "svc_rbf.fit(X_small, y_small)\n",
-    "\n",
-    "score_rbf = svc_rbf.score(X_test_small, y_test_small)\n",
-    "print(\"Classical SVC (RBF) accuracy:\", score_rbf)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9f252e1d",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hybrid SVC accuracy: 0.7792207792207793\n"
-     ]
-    }
-   ],
-   "source": [
-    "# 5. Hybrid SVC (classical SVC using the optimal quantum kernel matrix)\n",
+    "from qiskit_machine_learning.kernels import TrainableFidelityStatevectorKernel\n",
+    "from qiskit_machine_learning.algorithms import QSVC\n",
     "from sklearn.svm import SVC\n",
+    "from scipy.optimize import minimize\n",
+    "import numpy as np\n",
     "\n",
-    "# hybrid SVC + optimal kernel\n",
-    "hybrid_svc = SVC(kernel=\"precomputed\")\n",
-    "hybrid_svc.fit(K_train, y_small)\n",
+    "# 1. Create trainable kernel\n",
+    "trainable_kernel = TrainableFidelityStatevectorKernel(feature_map=feature_map)\n",
     "\n",
-    "score_hybrid = hybrid_svc.score(K_test, y_test_small)\n",
-    "print(\"Hybrid SVC accuracy:\", score_hybrid)\n"
+    "# 2. Initialize trainable parameters randomly\n",
+    "params = np.random.rand(len(trainable_kernel.get_trainable_parameters()))\n",
+    "\n",
+    "# 3. Define a loss function for kernel training\n",
+    "def kernel_loss(params_vector):\n",
+    "    # Set kernel parameters\n",
+    "    trainable_kernel.set_parameters(params_vector)\n",
+    "    \n",
+    "    # Compute precomputed kernel matrix\n",
+    "    K_train = trainable_kernel.evaluate(X_small)\n",
+    "    \n",
+    "    # Fit SVC with precomputed kernel\n",
+    "    svc = SVC(kernel=\"precomputed\")\n",
+    "    svc.fit(K_train, y_small)\n",
+    "    \n",
+    "    # Return 1 - accuracy as loss\n",
+    "    score = svc.score(K_train, y_small)\n",
+    "    return 1 - score\n",
+    "\n",
+    "# 4. Optimize parameters using scipy's 'minimize'\n",
+    "res = minimize(kernel_loss, params, method='Powell', options={'maxiter': 20})\n",
+    "\n",
+    "# 5. Set optimized parameters to the kernel\n",
+    "trainable_kernel.set_parameters(res.x)\n",
+    "optimal_kernel = trainable_kernel\n",
+    "\n",
+    "# 6. Precompute kernel matrices\n",
+    "K_train_opt = optimal_kernel.evaluate(X_small)\n",
+    "K_test_opt  = optimal_kernel.evaluate(X_test_small, X_small)\n",
+    "\n",
+    "# 7. Classical SVC with trained quantum kernel\n",
+    "svc_trainable = SVC(kernel=\"precomputed\")\n",
+    "svc_trainable.fit(K_train_opt, y_small)\n",
+    "score_svc_trainable = svc_trainable.score(K_test_opt, y_test_small)\n",
+    "print(\"SVC + Trainable Quantum Kernel accuracy:\", score_svc_trainable)\n",
+    "\n",
+    "# 8. QSVC with trained quantum kernel\n",
+    "qsvc_trainable = QSVC(quantum_kernel=optimal_kernel)\n",
+    "qsvc_trainable.fit(X_small, y_small)\n",
+    "score_qsvc_trainable = qsvc_trainable.score(X_test_small, y_test_small)\n",
+    "print(\"QSVC + Trainable Quantum Kernel accuracy:\", score_qsvc_trainable)\n"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
