--- a/04_ReadDatasets.ipynb
+++ b/04_ReadDatasets.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "67b6f584",
    "metadata": {},
    "outputs": [],
@@ -12,10 +12,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "ed23f245",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mFailed to restart the Kernel. \n",
+      "\u001b[1;31mFailed to fetch. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
+    }
+   ],
    "source": [
     "# load data\n",
     "import csv\n",
@@ -125,7 +136,7 @@
     "correlations = X_df.apply(lambda col: col.corr(y_s))\n",
     "correlations_abs = correlations.abs().sort_values(ascending=False)\n",
     "\n",
-    "print(\"\\n PEARSON CORRELATIONS (ABS SORTED)\")\n",
+    "print(\"\\nPEARSON CORRELATIONS (ABS SORTED)\")\n",
     "print(correlations_abs)\n",
     "\n",
     "# select top-k features\n",
@@ -277,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "eeb359d4",
    "metadata": {},
    "outputs": [
@@ -292,6 +303,7 @@
    "source": [
     "# MODEL 3: Classical SVC + Quantum Kernel as a callable\n",
     "# the classical SVC calls the quantum kernel during training\n",
+    "\n",
     "svc_callable = SVC(kernel=quantum_kernel.evaluate)\n",
     "svc_callable.fit(X_small, y_small)\n",
     "\n",
@@ -338,7 +350,8 @@
    "outputs": [],
    "source": [
     "# MODEL 5: Trainable Quantum Kernel\n",
-    "# External imports \n",
+    "\n",
+    "# external imports \n",
     "from qiskit import QuantumCircuit\n",
     "from qiskit.circuit import ParameterVector\n",
     "from qiskit.circuit.library import ZZFeatureMap\n",
@@ -398,83 +411,55 @@
     }
    ],
    "source": [
-    "num_features = X_train.shape[1]  # should be 5 in this notebook\n",
+    "# ----------------------------------------\n",
+    "# SECTION 1 — Feature Map + Trainable Kernel + SPSA + Trainer\n",
+    "# ----------------------------------------\n",
+    "\n",
+    "num_features = X_train.shape[1]  # should be 5\n",
+    "\n",
+    "# Trainable rotation layer\n",
     "fm0 = QuantumCircuit(num_features)\n",
     "training_params = ParameterVector(\"θ\", 1)\n",
     "\n",
-    "# Apply rotation to all qubits\n",
     "for q in range(num_features):\n",
     "    fm0.ry(training_params[0], q)\n",
     "\n",
-    "# Use simple ZZFeatureMap\n",
+    "# Static ZZFeatureMap\n",
     "fm1 = ZZFeatureMap(num_features, reps=1, entanglement='linear')\n",
     "\n",
-    "# Compose trainable rotation + feature map\n",
+    "# Compose trainable + fixed map\n",
     "fm = fm0.compose(fm1)\n",
+    "\n",
     "print(circuit_drawer(fm))\n",
     "print(f\"Trainable parameters: {training_params}\")\n",
+    "\n",
+    "# Trainable kernel\n",
+    "from qiskit.primitives import Sampler\n",
+    "sampler = Sampler()\n",
     "\n",
     "quant_kernel = TrainableFidelityQuantumKernel(\n",
     "    feature_map=fm,\n",
     "    training_parameters=training_params,\n",
-    "    \n",
+    "    sampler=sampler,\n",
+    "    cache=True\n",
     ")\n",
     "\n",
-    "# --------------------------\n",
-    "# SPSA optimizer\n",
-    "# --------------------------\n",
+    "# SPSA\n",
     "cb_qkt = QKTCallback()\n",
     "spsa_opt = SPSA(\n",
-    "    maxiter=1,               # minimal iteration for speed\n",
+    "    maxiter=1,\n",
     "    callback=cb_qkt.callback,\n",
     "    learning_rate=0.05,\n",
     "    perturbation=0.05\n",
     ")\n",
     "\n",
-    "# --------------------------\n",
-    "# Quantum Kernel Trainer\n",
-    "# --------------------------\n",
+    "# Kernel trainer\n",
     "qkt = QuantumKernelTrainer(\n",
     "    quantum_kernel=quant_kernel,\n",
     "    loss=\"svc_loss\",\n",
     "    optimizer=spsa_opt,\n",
     "    initial_point=[np.pi / 2]\n",
-    ")\n",
-    "\n",
-    "# --------------------------\n",
-    "# Use a small subset of training samples to speed up kernel training\n",
-    "# --------------------------\n",
-    "subset_idx = np.random.choice(len(X_small), size=20, replace=False)\n",
-    "X_subset = X_small[subset_idx]\n",
-    "y_subset = y_small[subset_idx]\n",
-    "\n",
-    "# Train the kernel\n",
-    "print(\"Training trainable quantum kernel on subset...\")\n",
-    "qka_results = qkt.fit(X_subset, y_subset)\n",
-    "optimized_kernel = qka_results.quantum_kernel\n",
-    "print(qka_results)\n",
-    "\n",
-    "# --------------------------\n",
-    "# QSVC using optimized kernel\n",
-    "# --------------------------\n",
-    "qsvc = QSVC(quantum_kernel=optimized_kernel)\n",
-    "qsvc.fit(X_small, y_small)\n",
-    "\n",
-    "# Predict on test set\n",
-    "labels_test = qsvc.predict(X_test_small)\n",
-    "accuracy_test = metrics.balanced_accuracy_score(y_true=y_test_small, y_pred=labels_test)\n",
-    "print(f\"Trainable kernel QSVC test accuracy: {accuracy_test:.3f}\")\n",
-    "\n",
-    "# --------------------------\n",
-    "# Classical SVC using precomputed optimized kernel\n",
-    "# --------------------------\n",
-    "K_train = optimized_kernel.evaluate(X_small)\n",
-    "K_test  = optimized_kernel.evaluate(X_test_small, X_small)\n",
-    "\n",
-    "svc_pre = SVC(kernel=\"precomputed\")\n",
-    "svc_pre.fit(K_train, y_small)\n",
-    "pre_score = svc_pre.score(K_test, y_test_small)\n",
-    "print(f\"Precomputed kernel classification test score: {pre_score:.3f}\")"
+    ")\n"
    ]
   },
   {
@@ -514,33 +499,20 @@
     }
    ],
    "source": [
-    "from qiskit.primitives import Sampler\n",
+    "# ----------------------------------------\n",
+    "# SECTION 2 — Subset + Training Trainable Kernel\n",
+    "# ----------------------------------------\n",
     "\n",
-    "sampler = Sampler()\n",
+    "# Use a small subset of training samples to reduce runtime\n",
+    "subset_idx = np.random.choice(len(X_small), size=100, replace=False)\n",
+    "X_subset = X_small[subset_idx]\n",
+    "y_subset = y_small[subset_idx]\n",
     "\n",
-    "quant_kernel = TrainableFidelityQuantumKernel(\n",
-    "    feature_map=fm,\n",
-    "    training_parameters=training_params,\n",
-    "    sampler=sampler,\n",
-    "    cache=True\n",
-    ")\n",
+    "print(\"Training trainable quantum kernel on subset...\")\n",
+    "qka_results = qkt.fit(X_subset, y_subset)\n",
     "\n",
-    "cb_qkt = QKTCallback()\n",
-    "spsa_opt = SPSA(maxiter=1, callback=cb_qkt.callback, learning_rate=0.05, perturbation=0.05)\n",
-    "\n",
-    "qkt = QuantumKernelTrainer(\n",
-    "    quantum_kernel=quant_kernel,\n",
-    "    loss=\"svc_loss\",\n",
-    "    optimizer=spsa_opt,\n",
-    "    initial_point=[np.pi / 2]\n",
-    ")\n",
-    "\n",
-    "# Use only a small subset for training (optional, highly recommended)\n",
-    "sample_idx = np.random.choice(len(X_small), size=100, replace=False)\n",
-    "qka_results = qkt.fit(X_small[sample_idx], y_small[sample_idx])\n",
     "optimized_kernel = qka_results.quantum_kernel\n",
     "print(qka_results)\n",
-    "\n",
     "\n"
    ]
   },
@@ -551,36 +523,42 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "qsvc = QSVC(quantum_kernel=optimized_kernel)\n",
+    "# ----------------------------------------\n",
+    "# SECTION 3 — QSVC + Classical SVC Using the Optimized Kernel\n",
+    "# ----------------------------------------\n",
     "\n",
-    "# Fit the QSVC\n",
+    "# --- Quantum SVC ---\n",
+    "qsvc = QSVC(quantum_kernel=optimized_kernel)\n",
     "qsvc.fit(X_small, y_small)\n",
     "\n",
-    "# Predict the labels\n",
     "labels_test = qsvc.predict(X_test_small)\n",
     "\n",
-    "# Balanced accuracy\n",
-    "accuracy_test = metrics.balanced_accuracy_score(y_true=y_test, y_pred=labels_test)\n",
-    "print(f\"Trainable kernel QSVC test accuracy: {accuracy_test}\")\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b6763b52",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# hybrid SVC + optimal kernel\n",
-    "adhoc_matrix_train = optimized_kernel.evaluate(x_vec=X_small)\n",
-    "adhoc_matrix_test = optimized_kernel.evaluate(x_vec=X_test_small, y_vec=X_small)\n",
+    "accuracy_test = metrics.balanced_accuracy_score(y_true=y_test_small, y_pred=labels_test)\n",
+    "print(f\"Trainable kernel QSVC test accuracy: {accuracy_test:.3f}\")\n",
+    "\n",
+    "# ----- Hybrid SVC + Optimal Quantum Kernel (your missing part) -----\n",
+    "adhoc_matrix_train = optimized_kernel.evaluate(X_small)\n",
+    "adhoc_matrix_test  = optimized_kernel.evaluate(X_test_small, X_small)\n",
+    "\n",
+    "adhoc_svc = SVC(kernel=\"precomputed\")\n",
+    "adhoc_svc.fit(adhoc_matrix_train, y_small)\n",
+    "\n",
+    "adhoc_score_precomputed_kernel = adhoc_svc.score(\n",
+    "    adhoc_matrix_test, \n",
+    "    y_test_small\n",
+    ")\n",
+    "print(f\"Hybrid SVC (precomputed optimal kernel) test score: {adhoc_score_precomputed_kernel:.3f}\")\n",
+    "\n",
+    "# --- Classical SVC (precomputed kernel) ---\n",
+    "adhoc_matrix_train = optimized_kernel.evaluate(X_small)\n",
+    "adhoc_matrix_test  = optimized_kernel.evaluate(X_test_small, X_small)\n",
     "\n",
     "adhoc_svc = SVC(kernel=\"precomputed\")\n",
     "adhoc_svc.fit(adhoc_matrix_train, y_small)\n",
     "\n",
     "adhoc_score_precomputed_kernel = adhoc_svc.score(adhoc_matrix_test, y_test_small)\n",
-    "print(f\"Precomputed kernel classification test score: {adhoc_score_precomputed_kernel\n"
+    "print(f\"Precomputed kernel classification test score: {adhoc_score_precomputed_kernel:.3f}\")\n",
+    "\n"
    ]
   }
  ],
@@ -589,18 +567,6 @@
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.12.1"
   }
  },
  "nbformat": 4,
