--- a/04_ReadDatasets.ipynb
+++ b/04_ReadDatasets.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "67b6f584",
    "metadata": {},
    "outputs": [],
@@ -12,21 +12,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "ed23f245",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mFailed to restart the Kernel. \n",
-      "\u001b[1;31mFailed to fetch. \n",
-      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# load data\n",
     "import csv\n",
@@ -93,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "dc40975a",
    "metadata": {},
    "outputs": [
@@ -102,7 +91,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      " PEARSON CORRELATIONS (ABS SORTED)\n",
+      "PEARSON CORRELATIONS (ABS SORTED)\n",
       "10    0.733376\n",
       "15    0.708957\n",
       "12    0.632323\n",
@@ -243,7 +232,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Training took 0.6025853157043457 seconds\n"
+      "Training took 0.7174196243286133 seconds\n"
      ]
     }
    ],
@@ -288,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "eeb359d4",
    "metadata": {},
    "outputs": [
@@ -387,33 +376,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "54eea97c",
+   "id": "e659ce64",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "     ┌──────────┐┌─────────────────────────────────────────┐\n",
-      "q_0: ┤ Ry(θ[0]) ├┤0                                        ├\n",
-      "     ├──────────┤│                                         │\n",
-      "q_1: ┤ Ry(θ[0]) ├┤1                                        ├\n",
-      "     ├──────────┤│                                         │\n",
-      "q_2: ┤ Ry(θ[0]) ├┤2 ZZFeatureMap(x[0],x[1],x[2],x[3],x[4]) ├\n",
-      "     ├──────────┤│                                         │\n",
-      "q_3: ┤ Ry(θ[0]) ├┤3                                        ├\n",
-      "     ├──────────┤│                                         │\n",
-      "q_4: ┤ Ry(θ[0]) ├┤4                                        ├\n",
-      "     └──────────┘└─────────────────────────────────────────┘\n",
-      "Trainable parameters: θ, ['θ[0]']\n",
-      "Training trainable quantum kernel on subset...\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# ----------------------------------------\n",
     "# SECTION 1 — Feature Map + Trainable Kernel + SPSA + Trainer\n",
-    "# ----------------------------------------\n",
+    "\n",
     "\n",
     "num_features = X_train.shape[1]  # should be 5\n",
     "\n",
@@ -472,36 +440,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "     ┌──────────┐┌─────────────────────────────────────────┐\n",
-      "q_0: ┤ Ry(θ[0]) ├┤0                                        ├\n",
-      "     ├──────────┤│                                         │\n",
-      "q_1: ┤ Ry(θ[0]) ├┤1                                        ├\n",
-      "     ├──────────┤│                                         │\n",
-      "q_2: ┤ Ry(θ[0]) ├┤2 ZZFeatureMap(x[0],x[1],x[2],x[3],x[4]) ├\n",
-      "     ├──────────┤│                                         │\n",
-      "q_3: ┤ Ry(θ[0]) ├┤3                                        ├\n",
-      "     ├──────────┤│                                         │\n",
-      "q_4: ┤ Ry(θ[0]) ├┤4                                        ├\n",
-      "     └──────────┘└─────────────────────────────────────────┘\n",
-      "Trainable parameters: θ, ['θ[0]']\n"
-     ]
-    },
-    {
-     "ename": "TypeError",
-     "evalue": "TrainableFidelityQuantumKernel.__init__() got an unexpected keyword argument 'cache'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mTypeError\u001b[39m                                 Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[18]\u001b[39m\u001b[32m, line 58\u001b[39m\n\u001b[32m     53\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mTrainable parameters: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mtraining_params\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m\"\u001b[39m)\n\u001b[32m     55\u001b[39m \u001b[38;5;66;03m# --------------------------\u001b[39;00m\n\u001b[32m     56\u001b[39m \u001b[38;5;66;03m# Instantiate trainable quantum kernel\u001b[39;00m\n\u001b[32m     57\u001b[39m \u001b[38;5;66;03m# --------------------------\u001b[39;00m\n\u001b[32m---> \u001b[39m\u001b[32m58\u001b[39m quant_kernel = \u001b[43mTrainableFidelityQuantumKernel\u001b[49m\u001b[43m(\u001b[49m\n\u001b[32m     59\u001b[39m \u001b[43m    \u001b[49m\u001b[43mfeature_map\u001b[49m\u001b[43m=\u001b[49m\u001b[43mfm\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m     60\u001b[39m \u001b[43m    \u001b[49m\u001b[43mtraining_parameters\u001b[49m\u001b[43m=\u001b[49m\u001b[43mtraining_params\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m     61\u001b[39m \u001b[43m    \u001b[49m\u001b[43mcache\u001b[49m\u001b[43m=\u001b[49m\u001b[38;5;28;43;01mTrue\u001b[39;49;00m\u001b[43m  \u001b[49m\u001b[38;5;66;43;03m# speeds up repeated kernel evaluations\u001b[39;49;00m\n\u001b[32m     62\u001b[39m \u001b[43m)\u001b[49m\n\u001b[32m     64\u001b[39m \u001b[38;5;66;03m# --------------------------\u001b[39;00m\n\u001b[32m     65\u001b[39m \u001b[38;5;66;03m# SPSA optimizer\u001b[39;00m\n\u001b[32m     66\u001b[39m \u001b[38;5;66;03m# --------------------------\u001b[39;00m\n\u001b[32m     67\u001b[39m cb_qkt = QKTCallback()\n",
-      "\u001b[31mTypeError\u001b[39m: TrainableFidelityQuantumKernel.__init__() got an unexpected keyword argument 'cache'"
+      "Training trainable quantum kernel on subset...\n",
+      "{   'optimal_circuit': None,\n",
+      "    'optimal_parameters': {   ParameterVectorElement(θ[0]): np.float64(1.570796326794861)},\n",
+      "    'optimal_point': array([1.57079633]),\n",
+      "    'optimal_value': np.float64(65.99999999999996),\n",
+      "    'optimizer_evals': 3,\n",
+      "    'optimizer_result': None,\n",
+      "    'optimizer_time': None,\n",
+      "    'quantum_kernel': <qiskit_machine_learning.kernels.trainable_fidelity_quantum_kernel.TrainableFidelityQuantumKernel object at 0x703a6ec385f0>}\n"
      ]
     }
    ],
    "source": [
-    "# ----------------------------------------\n",
     "# SECTION 2 — Subset + Training Trainable Kernel\n",
-    "# ----------------------------------------\n",
     "\n",
     "# Use a small subset of training samples to reduce runtime\n",
     "subset_idx = np.random.choice(len(X_small), size=100, replace=False)\n",
@@ -521,11 +473,19 @@
    "execution_count": null,
    "id": "97ce318e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Trainable kernel QSVC test accuracy: 0.500\n",
+      "Hybrid SVC (precomputed optimal kernel) test score: 0.753\n",
+      "Precomputed kernel classification test score: 0.753\n"
+     ]
+    }
+   ],
    "source": [
-    "# ----------------------------------------\n",
     "# SECTION 3 — QSVC + Classical SVC Using the Optimized Kernel\n",
-    "# ----------------------------------------\n",
     "\n",
     "# --- Quantum SVC ---\n",
     "qsvc = QSVC(quantum_kernel=optimized_kernel)\n",
@@ -536,29 +496,46 @@
     "accuracy_test = metrics.balanced_accuracy_score(y_true=y_test_small, y_pred=labels_test)\n",
     "print(f\"Trainable kernel QSVC test accuracy: {accuracy_test:.3f}\")\n",
     "\n",
-    "# ----- Hybrid SVC + Optimal Quantum Kernel (your missing part) -----\n",
-    "adhoc_matrix_train = optimized_kernel.evaluate(X_small)\n",
-    "adhoc_matrix_test  = optimized_kernel.evaluate(X_test_small, X_small)\n",
     "\n",
+    "\n",
+    "# Hybrid SVC + Optimal Quantum Kernel (fixed version)\n",
+    "\n",
+    "\n",
+    "# IMPORTANT: use a small subset to avoid VERY long runtime\n",
+    "subset_idx = np.random.choice(len(X_small), size=20, replace=False)\n",
+    "X_train_small = X_small[subset_idx]\n",
+    "y_train_small = y_small[subset_idx]\n",
+    "\n",
+    "# Precompute kernel matrices\n",
+    "adhoc_matrix_train = optimized_kernel.evaluate(X_train_small)\n",
+    "adhoc_matrix_test  = optimized_kernel.evaluate(X_test_small, X_train_small)\n",
+    "\n",
+    "# IMPORTANT FIX: kernel=\"precomputed\" (NOT ==)\n",
     "adhoc_svc = SVC(kernel=\"precomputed\")\n",
-    "adhoc_svc.fit(adhoc_matrix_train, y_small)\n",
+    "adhoc_svc.fit(adhoc_matrix_train, y_train_small)\n",
     "\n",
     "adhoc_score_precomputed_kernel = adhoc_svc.score(\n",
-    "    adhoc_matrix_test, \n",
+    "    adhoc_matrix_test,\n",
     "    y_test_small\n",
     ")\n",
     "print(f\"Hybrid SVC (precomputed optimal kernel) test score: {adhoc_score_precomputed_kernel:.3f}\")\n",
     "\n",
-    "# --- Classical SVC (precomputed kernel) ---\n",
-    "adhoc_matrix_train = optimized_kernel.evaluate(X_small)\n",
-    "adhoc_matrix_test  = optimized_kernel.evaluate(X_test_small, X_small)\n",
     "\n",
-    "adhoc_svc = SVC(kernel=\"precomputed\")\n",
-    "adhoc_svc.fit(adhoc_matrix_train, y_small)\n",
     "\n",
-    "adhoc_score_precomputed_kernel = adhoc_svc.score(adhoc_matrix_test, y_test_small)\n",
-    "print(f\"Precomputed kernel classification test score: {adhoc_score_precomputed_kernel:.3f}\")\n",
-    "\n"
+    "# Classical SVC (full precomputed kernel)\n",
+    "\n",
+    "\n",
+    "# Optional: this version is slow, so you can keep it or remove it.\n",
+    "# If you keep it, it is safest to use the SAME subset:\n",
+    "\n",
+    "K_train = optimized_kernel.evaluate(X_train_small)\n",
+    "K_test  = optimized_kernel.evaluate(X_test_small, X_train_small)\n",
+    "\n",
+    "svc_pre = SVC(kernel=\"precomputed\")\n",
+    "svc_pre.fit(K_train, y_train_small)\n",
+    "\n",
+    "pre_score = svc_pre.score(K_test, y_test_small)\n",
+    "print(f\"Precomputed kernel classification test score: {pre_score:.3f}\")\n"
    ]
   }
  ],
