--- a/04_ReadDatasets.ipynb
+++ b/04_ReadDatasets.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "67b6f584",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "ed23f245",
    "metadata": {},
    "outputs": [],
@@ -37,30 +37,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "d1838dae",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array(['27', 'F', 'No', 'No', 'No', 'Euthyroid',\n",
-       "       'Single nodular goiter-left', 'No', 'Micropapillary', 'Uni-Focal',\n",
-       "       'Low', 'T1a', 'N0', 'M0', 'I', 'Indeterminate'], dtype=object)"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "X[0]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "d704b938",
    "metadata": {},
    "outputs": [],
@@ -82,40 +69,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "dc40975a",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "PEARSON CORRELATIONS (ABS SORTED)\n",
-      "10    0.733376\n",
-      "15    0.708957\n",
-      "12    0.632323\n",
-      "11    0.556201\n",
-      "14    0.449137\n",
-      "9     0.383776\n",
-      "13    0.354360\n",
-      "2     0.333243\n",
-      "1     0.328189\n",
-      "0     0.257659\n",
-      "7     0.182530\n",
-      "4     0.174407\n",
-      "3     0.136073\n",
-      "6     0.131801\n",
-      "5     0.067758\n",
-      "8     0.003272\n",
-      "dtype: float64\n",
-      "\n",
-      "Top 2 features: [10, 15]\n",
-      "Top 5 features: [10, 15, 12, 11, 14]\n",
-      "Top 10 features: [10, 15, 12, 11, 14, 9, 13, 2, 1, 0]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# convert to pandas so correlation works\n",
     "X_df = pd.DataFrame(X)\n",
@@ -140,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "1aeffc36",
    "metadata": {},
    "outputs": [],
@@ -157,21 +114,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "d4f0dcd3",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[2. 2. 0. 0. 0.]\n",
-      "Shape X: (383, 5)\n",
-      "Shape y: (383,)\n",
-      "Shape X: (2, 5)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# basic printing and shape checking to confirm dataset size\n",
     "print(X[0])\n",
@@ -184,19 +130,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "49459cb5",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "QSVC accuracy: 0.961038961038961\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# MODEL 1: QSVC + QuantumKernel (main baseline model)\n",
     "from sklearn.utils import resample\n",
@@ -224,18 +161,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "31e4b21c",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Training took 0.7174196243286133 seconds\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# this measures how long it takes to train the QSVC model\n",
     "# DOES NOT AFFECT ACCURACY\n",
@@ -249,18 +178,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "3094f32c",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Classical SVC (RBF) accuracy: 0.961038961038961\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# MODEL 2: Classical SVC (RBF baseline)\n",
     "# this is the normal, classical SVC\n",
@@ -277,18 +198,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "eeb359d4",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Callable SVC + Quantum Kernel accuracy: 0.961038961038961\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# MODEL 3: Classical SVC + Quantum Kernel as a callable\n",
     "# the classical SVC calls the quantum kernel during training\n",
@@ -303,18 +216,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "3e219f27",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Precomputed SVC + Quantum Kernel accuracy: 0.961038961038961\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# MODEL 4: Classical SVC using precomputed Quantum Kernel\n",
     "# SVC + QuantumTrainableKernel (Precomputed)\n",
@@ -333,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "id": "d215060c",
    "metadata": {},
    "outputs": [],
@@ -375,7 +280,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
+   "id": "3f6f8ce1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# test\n",
+    "# SECTION 1 — Feature Map + Trainable Kernel + SPSA + Trainer\n",
+    "\n",
+    "\n",
+    "num_features = X_train.shape[1]  # e.g., 5 features\n",
+    "\n",
+    "# --- Trainable rotation layer: one parameter per qubit ---\n",
+    "fm0 = QuantumCircuit(num_features)\n",
+    "training_params = ParameterVector(\"θ\", num_features)\n",
+    "\n",
+    "for q in range(num_features):\n",
+    "    fm0.ry(training_params[q], q)\n",
+    "\n",
+    "# Add simple entangling layer (linear chain)\n",
+    "for i in range(num_features - 1):\n",
+    "    fm0.cx(i, i+1)\n",
+    "\n",
+    "# --- Static ZZFeatureMap ---\n",
+    "fm1 = ZZFeatureMap(num_features, reps=1, entanglement='linear')\n",
+    "\n",
+    "# Compose trainable + fixed map\n",
+    "fm = fm0.compose(fm1)\n",
+    "\n",
+    "print(circuit_drawer(fm))\n",
+    "print(f\"Trainable parameters: {training_params}\")\n",
+    "\n",
+    "# --- Trainable kernel ---\n",
+    "from qiskit.primitives import Sampler\n",
+    "sampler = Sampler()\n",
+    "\n",
+    "quant_kernel = TrainableFidelityQuantumKernel(\n",
+    "    feature_map=fm,\n",
+    "    training_parameters=training_params\n",
+    ")\n",
+    "\n",
+    "# --- SPSA optimizer ---\n",
+    "cb_qkt = QKTCallback()\n",
+    "spsa_opt = SPSA(\n",
+    "    maxiter=15,\n",
+    "    callback=cb_qkt.callback,\n",
+    "    learning_rate=0.05,\n",
+    "    perturbation=0.05\n",
+    ")\n",
+    "\n",
+    "# --- Kernel trainer ---\n",
+    "initial_point = np.random.rand(num_features) * np.pi\n",
+    "qkt = QuantumKernelTrainer(\n",
+    "    quantum_kernel=quant_kernel,\n",
+    "    loss=\"svc_loss\",\n",
+    "    optimizer=spsa_opt,\n",
+    "    initial_point=initial_point\n",
+    ")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
    "id": "e659ce64",
    "metadata": {},
    "outputs": [],
@@ -408,14 +374,13 @@
     "quant_kernel = TrainableFidelityQuantumKernel(\n",
     "    feature_map=fm,\n",
     "    training_parameters=training_params,\n",
-    "    sampler=sampler,\n",
-    "    cache=True\n",
+    "    \n",
     ")\n",
     "\n",
     "# SPSA\n",
     "cb_qkt = QKTCallback()\n",
     "spsa_opt = SPSA(\n",
-    "    maxiter=1,\n",
+    "    maxiter=15,\n",
     "    callback=cb_qkt.callback,\n",
     "    learning_rate=0.05,\n",
     "    perturbation=0.05\n",
@@ -435,28 +400,12 @@
    "execution_count": null,
    "id": "b104437c",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Training trainable quantum kernel on subset...\n",
-      "{   'optimal_circuit': None,\n",
-      "    'optimal_parameters': {   ParameterVectorElement(θ[0]): np.float64(1.570796326794861)},\n",
-      "    'optimal_point': array([1.57079633]),\n",
-      "    'optimal_value': np.float64(65.99999999999996),\n",
-      "    'optimizer_evals': 3,\n",
-      "    'optimizer_result': None,\n",
-      "    'optimizer_time': None,\n",
-      "    'quantum_kernel': <qiskit_machine_learning.kernels.trainable_fidelity_quantum_kernel.TrainableFidelityQuantumKernel object at 0x703a6ec385f0>}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# SECTION 2 — Subset + Training Trainable Kernel\n",
     "\n",
     "# Use a small subset of training samples to reduce runtime\n",
-    "subset_idx = np.random.choice(len(X_small), size=100, replace=False)\n",
+    "subset_idx = np.random.choice(len(X_small), size=50, replace=False)\n",
     "X_subset = X_small[subset_idx]\n",
     "y_subset = y_small[subset_idx]\n",
     "\n",
@@ -470,20 +419,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "97ce318e",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Trainable kernel QSVC test accuracy: 0.500\n",
-      "Hybrid SVC (precomputed optimal kernel) test score: 0.753\n",
-      "Precomputed kernel classification test score: 0.753\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# SECTION 3 — QSVC + Classical SVC Using the Optimized Kernel\n",
     "\n",
@@ -502,7 +441,7 @@
     "\n",
     "\n",
     "# IMPORTANT: use a small subset to avoid VERY long runtime\n",
-    "subset_idx = np.random.choice(len(X_small), size=20, replace=False)\n",
+    "subset_idx = np.random.choice(len(X_small), size=50, replace=False)\n",
     "X_train_small = X_small[subset_idx]\n",
     "y_train_small = y_small[subset_idx]\n",
     "\n",
